--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,15 @@
 
 .assistant-container {
   display: flex;
-  justify-content: center;
+  justify-content: center;  
   align-items: center;
   margin: 20px 0;
-  margin-left: -34px;
 }
 
 .assistant-icon {
   width: 25px;
   height: 25px;
-  margin-right: 30px;
+  margin-right: 30px; 
 }
 
 .assistant-name {
@@ -43,12 +42,12 @@
 
 h1 {
   color: #333;
-  padding: 20px 0px; 
+  padding: 20px 0px;
 }
 
 .intro-text {
   font-size: 16px;
-  color: #999;
+  color: #999; 
   font-style: normal;
   text-align: center;
   margin-top: -30px;
@@ -59,7 +58,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: -20px 0 20px 0;
+  margin: -20px 0 20px 0;  
 }
 
 .quote {
@@ -70,7 +69,7 @@ h1 {
 .author {
   font-size: 12px;
   color: #999;
-  margin-right: 10px;
+  margin-right: 10px; 
 }
 
 .project {
@@ -87,18 +86,18 @@ h1 {
   left: 20px;
   bottom: 0px;
   color: #999;
-  font-size: 12px; 
+  font-size: 12px;
 }
 
 h2 {
   color: #007BFF;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center;  
 }
 
 .project-icon {
-  width: 25px; 
+  width: 25px;
   height: 25px;
   margin-right: 10px;
 }
@@ -108,7 +107,7 @@ h2 {
   justify-content: space-between;
   align-items: flex-start;
   max-width: 300px;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
 .button {
@@ -120,7 +119,17 @@ h2 {
   text-decoration: none;
   transition: background-color 0.3s ease;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 16px;  
+}
+
+.button.disabled {
+  background-color: #888;
+  cursor: not-allowed;
+}
+
+.chatgpt-buttons {
+  justify-content: space-between;
+  max-width: 450px;
 }
 
 .editor-recommend {
@@ -132,14 +141,14 @@ h2 {
 }
 
 .editor-recommend .project {
-  border: 1px solid #007BFF; 
+  border: 1px solid #007BFF;
 }
 
 .editor-recommend .category-line {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative; 
+  position: relative;
 }
 
 .editor-recommend .category-line span {
@@ -149,7 +158,7 @@ h2 {
   border: none;
 }
 
-.editor-recommend .category-line::before,
+.editor-recommend .category-line::before, 
 .editor-recommend .category-line::after {
   content: "";
   flex-grow: 1;
@@ -164,7 +173,7 @@ h2 {
 }
 
 .editor-recommend .category-line::after {
-  margin-left: 10px;
+  margin-left: 10px; 
 }
 
 .editor-recommend .button {
@@ -179,7 +188,7 @@ h2 {
 }
 
 .project-description-mobile {
-  display: none; 
+  display: none;
 }
 
 .recommendation {
@@ -196,7 +205,7 @@ h2 {
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 0px auto;
+  margin: 0px auto;  
 }
 
 .version-container span {
@@ -207,12 +216,12 @@ h2 {
   color: #007BFF;
   text-decoration: none;
   transition: color 0.3s ease;
-  margin-left: 20px; 
+  margin-left: 20px;
   white-space: nowrap;
 }
 
 .version-link:hover {
-  color: #0056b3;
+  color: #0056b3;  
 }
 
 .ReactModal__Content {
@@ -222,7 +231,7 @@ h2 {
   right: auto;
   bottom: auto;
   width: 550px;
-  height: 275px;
+  height: 275px;  
   padding: 20px;
   transform: translate(-50%, -50%);
   background: #ffffff;
@@ -253,7 +262,7 @@ h2 {
 }
 
 .ReactModal__Content p {
-  margin-top: 40px; 
+  margin-top: 40px;
 }
 
 .small-text {
@@ -280,7 +289,7 @@ h2 {
   text-align: right;
   margin-top: 6.5px;
   width: 50%;
-  margin-left: 30.8%;
+  margin-left: 30.8%;  
 }
 
 .disclaimer {
@@ -293,7 +302,7 @@ h2 {
 @media (max-width: 768px) {
 
   .project-note {
-    bottom: 0px;
+    bottom: 0px; 
   }
   
   .ReactModal__Content {
@@ -311,7 +320,7 @@ h2 {
 
   .close-modal-button {
     top: 10px;
-    right: 5px; 
+    right: 5px;
   }
 
   .token-input {
