--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   font-family: Arial, sans-serif;
   padding: 20px;
   text-align: center;
-  background-color: #f4f4f4;
+  background-color: #fff0dd;
   max-width: 800px;
   margin: 0 auto;
   display: flex;
